on-the-fly cmoriser for ACCESS native data (#2430)
Co-authored-by: Yousong Zeng <Yousong>
Co-authored-by: Romain Beucher <romain.beucher@anu.edu.au>
Co-authored-by: Manuel Schlund <32543114+schlunma@users.noreply.github.com>

--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -194,3 +194,14 @@ CESM:
   output_file: '{project}_{dataset}_{case}_{gcomp}_{scomp}_{type}_{mip}_{short_name}'
   cmor_type: 'CMIP6'
   cmor_default_table_prefix: 'CMIP6_'
+
+ACCESS:
+  cmor_strict: false
+  input_dir:
+    default:
+      - '{dataset}/{sub_dataset}/{exp}/{modeling_realm}/netCDF'
+  input_file:
+    default: '{sub_dataset}.{special_attr}-*.nc'
+  output_file: '{project}_{dataset}_{mip}_{exp}_{institute}_{sub_dataset}_{special_attr}_{short_name}'
+  cmor_type: 'CMIP6'
+  cmor_default_table_prefix: 'CMIP6_'
